--- a/style.css
+++ b/style.css
@@ -3,6 +3,26 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
+    background-color: #131314;
+    font-family: 'Roboto', sans-serif;
+}
+
+.topBar {
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #343434;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.topBar a {
+    font-size: x-large;
+    color: white;
+    padding-left: 10px;
 }
 
 h1 {
