--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: #131314;
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .topBar {
